# force-insertion-policy

./: .gitignore  README.md  pyproject.toml
configs/: data_config.example copy.yaml  normalization_stats.yaml
scripts/: compute_normalization.py
shared/: normalization.py
